Add n_no_coor to index formats given that it has been being written by samtools for a few years.

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -995,7 +995,7 @@ saved.
   & \multicolumn{6}{c|}{\textcolor{gray}{\it List of intervals (n=n\_intv)}} \\\cline{3-7}
   & & \multicolumn{2}{l|}{\sf ioffset} & (Virtual) file offset of the first alignment in the interval & {\tt uint64\_t} & \\
   \cline{1-7}
-  \multicolumn{4}{|l|}{\sf unplaced\_count} & (Optional) \# of unmapped unplaced reads ({\sf RNAME} *) & {\tt uint64\_t} & \\\cline{1-7}
+  \multicolumn{4}{|l|}{\sf n\_no\_coor} & (Optional) \# of unmapped unplaced reads ({\sf RNAME} *) & {\tt uint64\_t} & \\\cline{1-7}
   \cline{1-7}
 \end{tabular}}
 \end{table}
