--- a/tabix.tex
+++ b/tabix.tex
@@ -61,7 +61,8 @@
 \cline{2-7}
  & \multicolumn{6}{c|}{\textcolor{gray}{\it List of distinct intervals (n=n\_intv)}} \\
 \cline{3-7}
- & & \multicolumn{2}{l|}{\tt ioff} & File offset of the first record in the interval & {\tt uint64\_t} & \\
+ & & \multicolumn{2}{l|}{\tt ioff} & File offset of the first record in the interval & {\tt uint64\_t} & \\\cline{1-7}
+\multicolumn{4}{|l|}{\sf n\_no\_coor} & \# unmapped reads without coordinates set & {\tt uint64\_t} & \\
 \hline
 \end{tabular}
 \end{center}
