Tidy up of title page and changed version number in initial paragraph.

--- a/cram.tex
+++ b/cram.tex
@@ -27,27 +27,19 @@
 
 
 
-\title{CRAM format specification}\maketitle
+\title{CRAM format specification (version 2.1)}
+\author{cram-dev@ebi.ac.uk}
+\date{\today}
+\maketitle
 
 \begin{center}
-\textit{}
+\textit{license: Apache 2.0}
 \end{center}
-
-\textit{version: 2.1}
-
-\textit{date: 12th of February 2014}
-
-\textit{license: }\textit{\emph{Apache 2.0}}
-
-\textit{by: }\textit{\emph{EMBL-EBI}}
-
-\textit{contacts: }\textit{\emph{cram-dev@ebi.ac.uk}}
-
 
 \newpage\tableofcontents\newpage
 \section{\textbf{Overview}}
 
-This specification describes the CRAM 2.0 format. 
+This specification describes the CRAM 2.1 format. 
 
 CRAM has the following major objectives:
 
